# haddock

./: cabal.project
mytest/: DummyPlugin.hs  UsingPlugins.hs  UsingPlugins2.hs  run-test.sh  run-test2.sh  test-haddock-plugins.cabal
