cabal-version:        2.0
name:                 test-haddock-plugins
version:              0
default-language:     Haskell2010
build-type:           Simple

Library
  Exposed-modules:    UsingPlugins
                      UsingPlugins2
                      DummyPlugin
  Build-depends:      base, ghc-typelits-knownnat, ghc
